2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (reindex): Remove.
	* database.cc (database::rehash): Likewise.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* change_set.{cc,hh}: Remove.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (Monotone.get_revision): Update to
	use 'automate get_revision' instead of 'cat revision'.

2006-01-10  Richard Levitte  <richard@levitte.org>

	* lua.cc (monotone_parse_basic_io_for_lua): Don't trust the
	returned value from lua_tostring() to stick around.  Instead, copy
	it into a regular std::string.
	* std_hooks.lua (get_netsync_read_permissions,
	get_netsync_write_permissions): Make sure to properly close the
	permission files.

2006-01-09  Richard Levitte  <richard@levitte.org>

	* contrib/usher.cc, monotone.1, monotone.cc, po/fr.po, po/ja.po,
	po/pt_BR.po, testsuite.at: Change the default port from 5253 to
	4691 (assigned to us by IANA).

2006-01-07  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* schema_migration.cc: add safe-guard against passing a null pointer
	into string handling. (necessary with sun studio)

2006-01-05  Derek Scherger  <derek@echologic.com>

	* app_state.{cc,hh} (set_restriction): remove "respect_ignore"
	flag and don't complain about ignored files
	* commands.cc (status, list, diff): allow --exclude option for
	restrictions
	* restrictions.hh: add a comment about restricted command
	consistency
	* tests/t_restricted_commands_consistent.at: new test to give that
	bark some bite
	* testsuite.at: call it
	
2005-12-29  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Write up for 0.25.

2005-12-29  Matthew Gregan  <kinetik@orcon.net.nz>

	* sqlite/{pager.c,sqlite3.h}: Upgrade to SQLite 3.2.8.

2005-12-29  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Notes on what to write up for 0.25.
	* win32/monotone.iss, monotone.spec, debian/changelog:
	* configure.ac, UPGRADE: Bump.

2005-12-26  Matt Johnston  <matt@ucc.asn.au>
